# Mats

./: CRATE.md  Cargo.toml  README.md  RELEASE.md  build.rs
examples/: compute.rs  computer_graphics2.rs  dynamic.rs  look_at.rs  main.rs  perspective.rs
examples/computer_graphics/: main.rs
examples/opengl/: mod.rs
src/: base.rs  generated.rs  graphics.rs  lib.rs  mat.rs  math.rs  ops.rs  traits.rs  types.rs  utils.rs
src/dynamic/: mat.rs  math.rs  matrix.rs  mod.rs  ops.rs
src/uniform/: mod.rs  uniform_f32.rs  uniform_f64.rs  uniform_i32.rs  uniform_u32.rs
