[package]
name = "mats"
version = "2.0.0"
edition = "2024"
build = "build.rs"
license = "MIT OR Apache-2.0"
readme = "CRATE.md"
description = "A lightweight, efficient, and easy-to-use Rust matrix library."
repository = "https://github.com/Anglebase/Mats.git"

[dependencies]
glium = { version = "0.36.0", optional = true }

[features]
default = []
uniforms = ["glium"]
graphics = ["uniforms"]

[dev-dependencies]
image = "0.25.8"
glium = "0.36.0"

[[example]]
name = "perspective"
required-features = ["graphics"]

[[example]]
name = "orthographic"
required-features = ["graphics"]

[[example]]
name = "look_at"
required-features = ["graphics"]

[package.metadata.docs.rs]
all-features = true